[package]
name = "rust-roguelike-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
rltk = { version = "0.8.0", features = ["serde"] }
specs = { version = "0.20.0", features = ["derive", "serde"] }
specs-derive = "0.4.1"
serde= { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"

